chore: update about page

--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@ title: About
 <h2>About</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style.
+:art:&nbsp;Yet another theme for elegant writers with modern flat style
+and beautiful night mode.
 </p>
 
 <p>
