--- a/photo.html
+++ b/photo.html
@@ -71,7 +71,7 @@ title: Photo
     ];
 
     var div = document.getElementById("div1");
-    for (let x = image.length; x > 0; x--) {
+    for (let x = image.length + 1; x > 0; x--) {
         var img = new Image(428, 321);
         img.src = 'photo/' + x + '.JPG';
 
