--- a/photo.html
+++ b/photo.html
@@ -67,11 +67,11 @@ title: Photo
         "photo/33.JPG",
         "photo/34.JPG",
         "photo/35.JPG",
-        "photo/36.JPG",
+        "photo\36.JPG",
     ];
 
     var div = document.getElementById("div1");
-    for (let x = image.length + 1; x > 0; x--) {
+    for (let x = image.length; x > 0; x--) {
         var img = new Image(428, 321);
         img.src = 'photo/' + x + '.JPG';
 
