--- a/photo.html
+++ b/photo.html
@@ -67,7 +67,7 @@ title: Photo
         "photo/33.JPG",
         "photo/34.JPG",
         "photo/35.JPG",
-        "photo\36.JPG",
+        "photo/36.JPG"
     ];
 
     var div = document.getElementById("div1");
