fix: correct typo of about page

--- a/about.html
+++ b/about.html
@@ -12,6 +12,6 @@ and beautiful night mode.
 
 <p>
 Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quiet clear, clean and neat for writers
+theme is a modern theme, and it's quite clear, clean and neat for writers
 and posts.
 </p>
