--- a/about.html
+++ b/about.html
@@ -6,8 +6,15 @@ title: About
 <h2>About</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
+
+우리는 누구인가
+
+코페르니쿠스 이후 우리는 혁명적인 교육플랫폼을 구축하여 세상을 가치있는 곳으로 변화시키기 위해 다양한 사람들이 공동의 목표를 위해 뭉쳤습니다.
+
+우리가 만들어가는 세상은 새로움을 넘어 에듀테크의 표준이 될 것입니다.
+
+우리는 에듀테크의 코페르니쿠스 혁명을 꿈꾸는 사람들입니다.
+
 </p>
 
 <p>
