--- a/about.html
+++ b/about.html
@@ -7,18 +7,16 @@ title: About
 
 <p>
 
-우리는 누구인가<br>
+우리는 누구인가?<br><br>
 
 코페르니쿠스 이후 우리는 혁명적인 교육플랫폼을 구축하여 세상을 가치있는 곳으로 변화시키기 위해 다양한 사람들이 공동의 목표를 위해 뭉쳤습니다.<br>
-
 우리가 만들어가는 세상은 새로움을 넘어 에듀테크의 표준이 될 것입니다.<br>
-
-우리는 에듀테크의 코페르니쿠스 혁명을 꿈꾸는 사람들입니다.
+우리는 에듀테크의 코페르니쿠스 혁명을 꿈꾸는 사람들입니다.<br><br>
 
 </p>
 
 <p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
+이곳의 블로그는 기술과 경험,팁,인터뷰,연구개발,외부발표,자기개발 혹은 일상의 이야기들을 공유하며, 에듀테크 산업의 발전을 위해 
+외부에 관심있는 분들과 함께 성장하고자 개설하였습니다.
+
 </p>
