--- a/test.html
+++ b/test.html
@@ -1,13 +1,12 @@
 ---
-layout: about
-title: About
+layout: test
+title: Test
 ---
 
-<h2>About</h2>
+<h2>TEST</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
+:TEST
 </p>
 
 <p>
