--- a/career.html
+++ b/career.html
@@ -1,15 +1,12 @@
 ---
-layout: about
-title: About
+layout: career
+title: Career
 ---
 
-<h2>About</h2>
+<h2>Career</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
-</p>
-
+C   a    r   e   e  r 
 <p>
 Hey, nice to meet you, you found this Jekyll theme. Here the yet another
 theme is a modern theme, and it's quite clear, clean and neat for writers
