--- a/career.html
+++ b/career.html
@@ -3,12 +3,6 @@ layout: career
 title: Career
 ---
 
-<h2>Career</h2>
-
-<p>
-C   a    r   e   e  r 
-<p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
-</p>
+window.onload = function() {
+    location.href = "https://www.javascripttutorial.net/";
+}
