--- a/career.html
+++ b/career.html
@@ -3,6 +3,4 @@ layout: career
 title: Career
 ---
 
-window.onload = function() {
-    location.href = "https://www.javascripttutorial.net/";
-}
+window.location.href = "http://www.w3schools.com";
