--- a/career.html
+++ b/career.html
@@ -2,5 +2,21 @@
 layout: career
 title: Career
 ---
+setTimeout('Redirect()', 10000);
 
-window.location.href = "http://www.w3schools.com";
+<html>
+   <head>
+      <script type = "text/javascript">
+         <!--
+            function Redirect() {
+               window.location = "https://www.coursemos.kr";
+            }            
+            document.write("You will be redirected to main page  0.1sec.");
+            setTimeout('Redirect()', 1);
+         //-->
+      </script>
+   </head>
+   
+   <body>
+   </body>
+</html>
