--- a/career.html
+++ b/career.html
@@ -8,10 +8,10 @@ title: Career
       <script type = "text/javascript">
          <!--
             function Redirect() {
-               window.location = "https://www.coursemos.kr";
+               window.location = "https://www.notion.so/12218c410da941b795b994745fec8b9f";
             }            
-            document.write("You will be redirected to main page  0.1sec.");
-            setTimeout('Redirect()', 1);
+            document.write("채용포털 이동");
+            setTimeout('Redirect()', 0.1);
          //-->
       </script>
    </head>
