--- a/coursemos.html
+++ b/coursemos.html
@@ -1,17 +1,21 @@
 ---
-layout: about
-title: About
+layout: coursemos
+title: COURSEMOS
 ---
 
-<h2>About</h2>
-
-<p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
-</p>
-
-<p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
-</p>
+<html>
+   <head>
+      <script type = "text/javascript">
+         <!--
+            function Redirect() {
+               window.location = "https://www.coursemos.kr";
+            }            
+            document.write("코스모스 사이트 이동.");
+            setTimeout('Redirect()', 0.01);
+         //-->
+      </script>
+   </head>
+   
+   <body>
+   </body>
+</html>
