--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 # Feel free to add content and custom Front Matter to this file.
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
-layout: home
-title: Home
+layout:
+title:
 banner: https://unsplash.it/2000/1322?a=.png
 ---
