--- a/about.html
+++ b/about.html
@@ -24,3 +24,10 @@ Tech blog<br><br>
 외부에 관심있는 분들과 함께 성장하고자 개설하였습니다.
 
 </p>
+
+위치 및 약도<br><br>
+
+<p>
+이메일 : mslee@ubion.co.kr
+위 치  : 서울시 구로구 디지털로 34길 27 대륭포스트타워 3차 601호
+</p>
