--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@ Tech blog<br><br>
 위치 및 약도<br><br>
 
 <p>
-이메일 : mslee@ubion.co.kr
-위 치  : 서울시 구로구 디지털로 34길 27 대륭포스트타워 3차 601호
+문 의 : mslee@ubion.co.kr
+위 치 : 서울시 구로구 디지털로 34길 27 대륭포스트타워 3차 601호
 </p>
+<img src="/assets/images/postimg/company_map.jpg")
