--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: About
 
 <p>
 
-우리는 무엇으로 기억되길 원하는가?<br><br>
+# 우리는 무엇으로 기억되길 원하는가?<br><br>
 
 코페르니쿠스 이후 우리는 고객이 원하는 혁명적인 교육플랫폼을 제공하기 위해
 다양한 사람들이 모였습니다.<br>
@@ -17,7 +17,7 @@ title: About
 
 </p>
 
-Tech blog<br><br>
+# Tech blog<br><br>
 
 <p>
 기술 블로그는 기술과 경험,팁,인터뷰,연구개발,외부발표,세미나,자기개발 혹은 일상의 이야기들을 공유하며, 에듀테크 산업의 발전을 위해 
@@ -25,10 +25,10 @@ Tech blog<br><br>
 
 </p>
 
-위치 및 약도<br><br>
+# 채용문의 및 약도<br><br>
 
 <p>
-문 의 : mslee@ubion.co.kr
+문 의 : mslee@ubion.co.kr<br>
 위 치 : 서울시 구로구 디지털로 34길 27 대륭포스트타워 3차 601호
 </p>
 <img src="/assets/images/postimg/company_map.jpg")
