--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ title: About
 
 </p>
 
-# Tech blog<br><br>
+# Tech Blog<br><br>
 
 <p>
 기술 블로그는 기술과 경험,팁,인터뷰,연구개발,외부발표,세미나,자기개발 혹은 일상의 이야기들을 공유하며, 에듀테크 산업의 발전을 위해 
