--- a/about.html
+++ b/about.html
@@ -29,6 +29,6 @@ title: About
 
 <p>
 문 의 : mslee@ubion.co.kr<br>
-위 치 : 서울시 구로구 디지털로 34길 27 대륭포스트타워 3차 601호(지하철 3번출구에서 5분 이내)
+위 치 : 서울시 구로구 디지털로 34길 27 대륭포스트타워 3차 601호(구로디지털단지역 3번출구에서 5분 이내)
 </p>
 <img src="/assets/images/postimg/company_map.jpg")
