--- a/photo.html
+++ b/photo.html
@@ -82,6 +82,20 @@ title: Photo
         "photo/37.JPG",
         "photo/38.JPG",
         "photo/39.JPG",
+        "photo/40.JPG",
+        "photo/41.JPG",
+        "photo/42.JPG",
+        "photo/43.JPG",
+        "photo/44.JPG",
+        "photo/45.JPG",
+        "photo/46.JPG",
+        "photo/47.JPG",
+        "photo/48.JPG",
+        "photo/49.JPG",
+        "photo/50.JPG",
+        "photo/51.JPG",
+        "photo/52.JPG",
+        "photo/53.JPG",     
     ];
 
     var div = document.getElementById("div1");
