--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
 layout: home
-#title: Home
-#banner: "/assets/images/banners/home.jpeg"
+title: Home
+banner: "/assets/images/banners/home.jpeg"
 ---
