--- a/publications/index.html
+++ b/publications/index.html
@@ -1,5 +1,14 @@
 ---
-layout: pubs
-title: All Publications
-banner: false
+layout: about
+title: Publications
+paginate: true
 ---
+
+<h2 id="index">Index</h2>
+<ul>
+    <li><a href="topics.html">By research topics</a></li>
+    <li><a href="tags.html">By tags</a></li>
+    <li><a href="archives.html">By year</a></li>
+</ul>
+
+<h2 id="publications">Publications</h2>
