--- a/publications/index.html
+++ b/publications/index.html
@@ -6,9 +6,9 @@ paginate: true
 
 <h2 id="index">Index</h2>
 <ul>
-    <li><a href="topics.html">By research topics</a></li>
-    <li><a href="tags.html">By tags</a></li>
-    <li><a href="archives.html">By year</a></li>
+    <li><a href="{{ '/publications/topics.html' | relative_url }}">By research topics</a></li>
+    <li><a href="{{ '/publications/tags.html' | relative_url }}">By tags</a></li>
+    <li><a href="{{ '/publications/archives.html' | relative_url }}">By year</a></li>
 </ul>
 
 <h2 id="publications">Publications</h2>
