Add notice board and improve layouts

--- a/publications/index.html
+++ b/publications/index.html
@@ -1,14 +1,6 @@
 ---
-layout: about
+layout: board
 title: Publications
-paginate: true
+paginate: posts
+sidebar: index-list
 ---
-
-<h2 id="index">Index</h2>
-<ul>
-    <li><a href="{{ '/publications/topics.html' | relative_url }}">By research topics</a></li>
-    <li><a href="{{ '/publications/tags.html' | relative_url }}">By tags</a></li>
-    <li><a href="{{ '/publications/archives.html' | relative_url }}">By year</a></li>
-</ul>
-
-<h2 id="publications">Publications</h2>
