--- a/about.html
+++ b/about.html
@@ -6,12 +6,14 @@ title: About
 <h2>About</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
+这里是DragonK的Blog。
 </p>
 
 <p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
+这里会发布一些课程笔记，以及学习笔记，欢迎浏览、交流学习。
+</p>
+
+<p>
+我的Github链接是<a href="https://github.com/atom-tracer">atom-tracer</a>。
+个人邮箱是1429281267@qq.com。
 </p>
