--- a/about.html
+++ b/about.html
@@ -6,12 +6,33 @@ title: About
 <h2>About</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
+Hey, nice to meet you.
 </p>
 
 <p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
+I graduated from the Department of Journalism at Konkuk University and 
+received my Master's degree in Journalism from the Graduate School of 
+Konkuk University, where I also completed my PhD. 
+</p>
+
+<p>
+I have worked as a senior researcher at the Korea Internet & Security 
+Agency and as an expert member of the LocalNewspaper Development Committee.
+Currently, I am a Research Fellow at the Newspaper Development Research 
+Institute of the Korean Newspaper Association and a Senior Researcher at 
+DCRD(the Center for Digital Communication Research) at Konkuk University. 
+</p>
+
+<p>
+My work mainly involves researching regional dynamics, spatial relations, 
+journalism and media policy for the development of domestic journalism. 
+</p>
+
+<p>
+Thank you for visiting my website and for your interest in my work 
+and research. Please feel free to explore the site to learn more about
+my studies and contributions in the fields of regional dynamics, 
+spatial relations, media and journalism. If you have any questions or 
+would like to engage in a meaningful discussion, please do not hesitate 
+to contact me. Your engagement and feedback is invaluable.
 </p>
