--- a/about.html
+++ b/about.html
@@ -5,13 +5,19 @@ title: About
 
 <h2>About</h2>
 
-<p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
-</p>
+Hi, thanks for paying me a visit in my own little corner of the internet.
 
-<p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
-</p>
+
+I was born in California and lived in both SoCal and NorCal as a young child. I’ve been living in Arizona since 2006, and have had the chance to live in a few different cities over the years. I grew up in Surprise, then moved to Flagstaff for my college years, spent a year in Buckeye, and now reside in my current home of Mesa. I’ve found Arizona to be really underrated in certain respects, but I’m also looking forward to all the other places I hope to see in my life.
+
+![Image of a snowy landscape](/assets/images/snow_2019.jpg)
+*The snow in Flagstaff, AZ in February 2019*
+
+
+I graduated from Northern Arizona University with a bachelor’s in applied computer science in 2021. After job searching for some time with little luck, I settled for a restaurant job to get the bills paid and take some time to reflect on what it was I really wanted for my career. I dabbled in some online courses here and there and decided to recommit myself fully to my love of the world of data.
+
+
+When I'm AFK I'm probably either hanging out with my cat, cross stitching, reading and/or listening to a book, catching up on the latest show, or cooking some new recipe. I also love to travel whenever I can. 
+
+![Image of a cat](/assets/images/modelkitty.jpg)
+*My cat, Nezuko, adopted in 2020 from Ark Cat Sanctuary in Flagstaff*
