--- a/about.html
+++ b/about.html
@@ -5,19 +5,28 @@ title: About
 
 <h2>About</h2>
 
-Hi, thanks for paying me a visit in my own little corner of the internet.
+<p>
+    Hi, thanks for paying me a visit in my own little corner of the internet!
+</p>
 
 
-I was born in California and lived in both SoCal and NorCal as a young child. I’ve been living in Arizona since 2006, and have had the chance to live in a few different cities over the years. I grew up in Surprise, then moved to Flagstaff for my college years, spent a year in Buckeye, and now reside in my current home of Mesa. I’ve found Arizona to be really underrated in certain respects, but I’m also looking forward to all the other places I hope to see in my life.
-
-![Image of a snowy landscape](/assets/images/snow_2019.jpg)
-*The snow in Flagstaff, AZ in February 2019*
-
-
-I graduated from Northern Arizona University with a bachelor’s in applied computer science in 2021. After job searching for some time with little luck, I settled for a restaurant job to get the bills paid and take some time to reflect on what it was I really wanted for my career. I dabbled in some online courses here and there and decided to recommit myself fully to my love of the world of data.
+<p>
+    I was born in California and lived in both SoCal and NorCal as a young child. I’ve been living in Arizona since 2006, and have had the chance to live in a few different cities over the years. I grew up in Surprise, then moved to Flagstaff for my college years, spent a year in Buckeye, and now reside in my current home of Mesa. I’ve found Arizona to be really underrated in certain respects, but I’m also looking forward to all the other places I hope to see in my life.
+</p>
 
 
-When I'm AFK I'm probably either hanging out with my cat, cross stitching, reading and/or listening to a book, catching up on the latest show, or cooking some new recipe. I also love to travel whenever I can. 
+<img src="/assets/images/snow_2019.jpg" alt="Snowy landscape in Flagstaff, AZ">
+The snow in Flagstaff, AZ in February 2019
 
-![Image of a cat](/assets/images/modelkitty.jpg)
-*My cat, Nezuko, adopted in 2020 from Ark Cat Sanctuary in Flagstaff*
+
+<p>
+    I graduated from Northern Arizona University with a bachelor’s in applied computer science in 2021. After job searching for some time with little luck, I settled for a restaurant job to get the bills paid and take some time to reflect on what it was I really wanted for my career. I dabbled in some online courses here and there and decided to recommit myself fully to my love of the world of data.
+</p>
+
+
+<p>
+    When I'm AFK I'm probably either hanging out with my cat, cross stitching, reading and/or listening to a book, catching up on the latest show, or cooking some new recipe. I also love to travel whenever I can. 
+</p>
+
+<img src="/assets/images/modelkitty.jpg" alt="Long-haired cat">
+My cat, Nezuko, adopted in 2020 from Ark Cat Sanctuary in Flagstaff
