--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@ layout: about
 title: About
 ---
 
+<style>
+    div {text-align: center;}
+</style>
+
 <h2>About</h2>
 
 <p>
@@ -16,7 +20,7 @@ title: About
 
 
 <img src="/assets/images/snow_2019.jpg" alt="Snowy landscape in Flagstaff, AZ">
-The snow in Flagstaff, AZ in February 2019
+<div>The snow in Flagstaff, AZ in February 2019</div>
 
 
 <p>
@@ -29,4 +33,4 @@ The snow in Flagstaff, AZ in February 2019
 </p>
 
 <img src="/assets/images/modelkitty.jpg" alt="Long-haired cat">
-My cat, Nezuko, adopted in 2020 from Ark Cat Sanctuary in Flagstaff
+<div>My cat, Nezuko, adopted in 2020 from Ark Cat Sanctuary in Flagstaff</div>
