feat: Started blogs!

--- a/about.html
+++ b/about.html
@@ -6,12 +6,20 @@ title: About
 <h2>About</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
+    Formerly the IEEE Neural Network Council, the IEEE Computational Intelligence Society focuses on the theory, design, application,
+    and development of nature- and brain-inspired knowledge representation and computational paradigms together with learning and artificially
+    intelligent systems in which these paradigms are contained.
 </p>
 
 <p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
+    IEEE CIS emphasizes the study and application of: Neural networks, Evolutionary algorithms, Swarm intelligence algorithms, Fuzzy and
+    rule-based systems, and Cognitive systems. Furthermore, Computational Intelligence (CI), often another name for Artificial Intelligence,
+    is the theory, design, application and development of biologically and linguistically motivated computational paradigms. Traditionally
+    the three main pillars of CI have been Neural Networks, Fuzzy Systems, and Evolutionary Computation.
+</p>
+
+<p>
+    The IEEE CIS Student Branch Chapter is affiliated to the Computer Science and Engineering Department of the University of Puerto Rico
+    at Mayagüez. Our mission is to further mathematics, science, and computing education in emerging fields within Artificial Intelligence
+    in our campus.
 </p>
